--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,7 +57,6 @@
     <string name="mitspielerAnzahl">Mitspieler: 0 von Max</string>
 
 
-
     <string name="numberWrapper">%1$d</string>
     <string name="combinedWrapper">Gesamt %1$d</string>
     <string name="nameWrapper">" %1$s"</string>
@@ -75,4 +74,6 @@
     <color name="grey">#696969</color>
     <color name="hellgrau">#808080</color>
     <color name="weiss">#ffffff</color>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
