--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,20 +1,20 @@
 <resources>
     <string name="app_name">Werwolf V2</string>
-    <string name="beschreibungFreunde">Die Freunde sehen sich in der ersten Runde. So wissen sie, das sie unschuldig sind. Stirbt einer der Freunde, leben die anderen weiter.</string>
-    <string name="beschreibungRitter">Stirbt der Ritter, so stirbt in der nächsten Runde der nächste Werwolf rechts des Ritters.</string>
-    <string name="beschreibungUrwolf">Der Urwolf handelt wie ein normaler Werwolf. Zusätzlich kann er einmal pro Spiel ein Opfer in einen Werwolf verwandeln. Das Opfer stirbt dann nicht und wacht ab sofort mit den Werwölfen zusammen auf.</string>
-    <string name="beschreibungFloetenspieler">Der bezaubernde Flötenspieler wacht jede Nacht auf und darf einen Spieler verzaubern. Hat er alle Mitspieler verzaubert gewinnt er.  !!!Der Flötenspieler ist der Beste!!!</string>
-    <string name="beschreibungMaedchen">Das Mädchen darf während die Werwölfe wach sind versuchen diese zu sehen. Es sollte sich nicht erwischen lassen.</string>
-    <string name="beschreibungWeisserWerwolf">Der weiße Werwolf wacht jede zweite Nacht auf darf einen der Werwölfe töten. Sein Ziel ist es alleiniger Überlebender zu sein.</string>
-    <string name="beschreibungJaeger">Stirbt der Jaeger kann er eine weitere Person mit in den Tot reißen.</string>
-    <string name="beschreibungJunges">Das Werwolf-Junge wählt zu Beginn der Runde ein Vorbild aus. Solange dieses Vorbild lebt ist das Werwolf-Junge ein normaler Bürger. wird das Vorbild getötet wird das Junge zum Werwolf und wacht ab sofort mit diesen in der Nacht auf.</string>
-    <string name="beschreibungWerwolf">Die Werwölfe wachen jede Nacht auf und bestimmen gemeinsam ein Opfer, welches daraufhn stirbt.</string>
-    <string name="beschreibungBuerger">Der Bürger schläft die ganze Nacht.</string>
-    <string name="beschreibungSeher">Der Seher wacht jede Nacht auf und wählt eine Person aus, deren Karte er sehen möchte. Der Spielleiter zeigt dem Seher diese Karte.</string>
-    <string name="beschreibungDieb">Der Dieb wählt jede Nacht eine Person aus bei der er selbige verbringt. Er kann dann nur sterben, wenn die Person, bei der er übernachtet getötet wird.</string>
-    <string name="beschreibungWaechter">Der Wächter wählt jede Nacht eine Person aus, die er beschützt. Er kann dann nur sterben, wenn die Person, die er beschützt getötet wird. Die zu beschützende Person überlebt.</string>
-    <string name="beschreibungHexe">Die Hexe besitzt zwei Tränke, die sie jeweils einmal pro Spiel einsetzen kann. Einer rettet dem, von den Werwölfen ausgewählten Opfer das Leben, der andere tötet eine von der Hexe wählbare Person.</string>
-    <string name="beschreibungAmor">Der Amor darf einmal zu Beginn des Spieles ein Liebespaar bestimmen, welches das restliche Spiel zusammenarbeiten. Stirbt einer der beiden Partner stirbt auch der andere.</string>
+    <string name="descriptionFreunde">Die Freunde sehen sich in der ersten Runde. So wissen sie, das sie unschuldig sind. Stirbt einer der Freunde, leben die anderen weiter.</string>
+    <string name="descriptionRitter">Stirbt der Ritter, so stirbt in der nächsten Runde der nächste Werwolf rechts des Ritters.</string>
+    <string name="descriptionUrwolf">Der Urwolf handelt wie ein normaler Werwolf. Zusätzlich kann er einmal pro Spiel ein Opfer in einen Werwolf verwandeln. Das Opfer stirbt dann nicht und wacht ab sofort mit den Werwölfen zusammen auf.</string>
+    <string name="descriptionFloetenspieler">Der bezaubernde Flötenspieler wacht jede Nacht auf und darf einen Spieler verzaubern. Hat er alle Mitspieler verzaubert gewinnt er.  !!!Der Flötenspieler ist der Beste!!!</string>
+    <string name="descriptionMaedchen">Das Mädchen darf während die Werwölfe wach sind versuchen diese zu sehen. Es sollte sich nicht erwischen lassen.</string>
+    <string name="descriptionWeisserWerwolf">Der weiße Werwolf wacht jede zweite Nacht auf darf einen der Werwölfe töten. Sein Ziel ist es alleiniger Überlebender zu sein.</string>
+    <string name="descriptionJaeger">Stirbt der Jaeger kann er eine weitere Person mit in den Tot reißen.</string>
+    <string name="descriptionJunges">Das Werwolf-Junge wählt zu Beginn der Runde ein Vorbild aus. Solange dieses Vorbild lebt ist das Werwolf-Junge ein normaler Bürger. wird das Vorbild getötet wird das Junge zum Werwolf und wacht ab sofort mit diesen in der Nacht auf.</string>
+    <string name="descriptionWerwolf">Die Werwölfe wachen jede Nacht auf und bestimmen gemeinsam ein Opfer, welches daraufhn stirbt.</string>
+    <string name="descriptionBuerger">Der Bürger schläft die ganze Nacht.</string>
+    <string name="descriptionSeher">Der Seher wacht jede Nacht auf und wählt eine Person aus, deren Karte er sehen möchte. Der Spielleiter zeigt dem Seher diese Karte.</string>
+    <string name="descriptionDieb">Der Dieb wählt jede Nacht eine Person aus bei der er selbige verbringt. Er kann dann nur sterben, wenn die Person, bei der er übernachtet getötet wird.</string>
+    <string name="descriptionWaechter">Der Wächter wählt jede Nacht eine Person aus, die er beschützt. Er kann dann nur sterben, wenn die Person, die er beschützt getötet wird. Die zu beschützende Person überlebt.</string>
+    <string name="descriptionHexe">Die Hexe besitzt zwei Tränke, die sie jeweils einmal pro Spiel einsetzen kann. Einer rettet dem, von den Werwölfen ausgewählten Opfer das Leben, der andere tötet eine von der Hexe wählbare Person.</string>
+    <string name="descriptionAmor">Der Amor darf einmal zu Beginn des Spieles ein Liebespaar bestimmen, welches das restliche Spiel zusammenarbeiten. Stirbt einer der beiden Partner stirbt auch der andere.</string>
     <string name="werwolf">Werwolf</string>
     <string name="versionNumber">Version 2.0</string>
     <string name="mit_karten">Mit Karten</string>
@@ -51,7 +51,7 @@
     <string name="bereit">Bereit</string>
     <string name="verbunden_nw_hle_deinen_spielernamen_und_best_tige_mit_bereit">Verbunden Wähle deinen Spielernamen und bestätige mit BEREIT.</string>
     <string name="warten_auf_andere_spieler">warten auf andere Spieler</string>
-    <string name="dreiPunkte">...</string>
+    <string name="dreiPunkte">…</string>
     <string name="scanne_den_qr_code_des_spielleiters_um_dich_zu_verbinden">Scanne den QR-Code des Spielleiters um dich zu Verbinden.</string>
     <string name="charakterkarte_dr_cken_und_halten_um_eigene_rolle_zu_sehen">Charakterkarte drücken und halten um eigene Rolle zu sehen.</string>
     <string name="mitspielerAnzahl">Mitspieler: 0 von Max</string>
@@ -69,11 +69,4 @@
     <string name="pressBackAgain">Um die App zu schließen Taste erneut drücken.</string>
     <string name="village">Dorf</string>
     <string name="manual_text_without_cards">Wie in II.Karten beschrieben muss die Anzahl der verschiedenen Charaktere sowie die Namen der mitspielenden Personen eingegeben werden.\n\nDie App lost jeder Person dann eine Rolle zu. Nacheinander wird je ein Namen, sowie dessen Karte ausgegeben. Der Spielleiter weckt die entsprechende Person und zeigt die Karte. Jeder Mitspieler muss sie sich merken. Sie kann nicht erneut gezeigt werden.</string>
-
-
-    <color name="grey">#696969</color>
-    <color name="hellgrau">#808080</color>
-    <color name="weiss">#ffffff</color>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
