--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,8 +69,21 @@
     <string name="pressBackAgain">Um die App zu schließen Taste erneut drücken.</string>
     <string name="village">Dorf</string>
     <string name="manual_text_without_cards">Wie in II.Karten beschrieben muss die Anzahl der verschiedenen Charaktere sowie die Namen der mitspielenden Personen eingegeben werden.\n\nDie App lost jeder Person dann eine Rolle zu. Nacheinander wird je ein Namen, sowie dessen Karte ausgegeben. Der Spielleiter weckt die entsprechende Person und zeigt die Karte. Jeder Mitspieler muss sie sich merken. Sie kann nicht erneut gezeigt werden.</string>
-    <string name="witch_night_desc_short">Als nächstes wacht die Hexe auf. Sie kann das Opfer...</string>
-    <string name="witch_night_desc_long">Als nächstes wacht die Hexe auf. Sie kann das Opfer -auf Opfer zeigen- retten, nichtstun, oder  eine weitere Person mit in den Tod reißen. -Dabei die drei Handzeichen für die Hexe sichtbar vormachen.</string>
-    <string name="werwolf_night_desc_short">Jetzt wachen die Werwölfe auf und suchen sich ihr Opfer...</string>
-    <string name="werwolf_night_desc_long">Jetzt wachen die Werwölfe auf und suchen sich ihr Opfer für diese Nacht aus. Haben sie sich entschieden schlafen sie auch schon wieder ein.</string>
+
+    <string name="night_desc_werwolf">Jetzt wachen die Werwölfe auf und suchen sich ihr Opfer für diese Nacht aus. Haben sie sich entschieden schlafen sie auch schon wieder ein.</string>
+    <string name="night_desc_citizen">empty</string>
+    <string name="night_desc_armor">Als erstes erwacht der Amor und zeigt auf zwei Personen, die sich augenblicklich unsterblich ineinander verlieben. - Amor schläft wieder ein. Ich tippe die beiden verliebten jetzt an un sie schauen sich tief in die Augen. - Auch sie schlafen jetzt wieder ein.</string>
+    <string name="night_desc_witch">Als nächstes wacht die Hexe auf. Sie kann das Opfer -auf Opfer zeigen- retten, nichtstun, oder  eine weitere Person mit in den Tod reißen. -Dabei die drei Handzeichen für die Hexe sichtbar vormachen.</string>
+    <string name="night_desc_guardian">Der Wächter wählt eine Person, die er diese Nacht beschützen möchte. - Der Wächter schläft wieder ein.</string>
+    <string name="night_desc_girl">empty</string>
+    <string name="night_desc_seher">Als nächstes wacht der Seher auf und zeigt auf eine Person, deren Karte er sehen möchte. Wenn er sie gesehen hat schläft er wieder ein.</string>
+    <string name="night_desc_thief">Jetzt erwacht der Dieb und sucht sich eine Person aus, bei der er oder sie die Nacht verbringen möchten. - Er zeigt auf diese Person und schläft danach wieder ein.</string>
+    <string name="night_desc_hunter">empty</string>
+    <string name="night_desc_knight">empty</string>
+    <string name="night_desc_flute">Zuletzt erwacht der bezaubernde Flötenspieler und darf eine Person seiner Wahl verzaubern. Hat er alle Mitspieler verzaubert gewinnt er.</string>
+    <string name="night_desc_friends">Ich tippe alle Freunde kurz an. - Jetzt erwachen die Freunde und schauen sich an, um sich später wiederzuerkennen. - Die Freunde schlafen beruhigt wieder ein, da sie wisssen, dass sie nicht alleine sind.</string>
+    <string name="night_desc_wolf_child">"Das Werwolfjunge erwacht und sucht sich ein Vorbild aus. Sollte dieses Vorbild sterben, wirst du auch ein Werwolf und wachst gemeinsam mit ihnen auf. -\n Das Junge schläft wieder."
+          </string>
+
+    <string name="night_desc_sleeping">Das ganze Dorf schläft ein.</string>
 </resources>
