--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,8 +78,8 @@
     <string name="night_desc_girl">empty</string>
     <string name="night_desc_seher">Als nächstes wacht der Seher auf und zeigt auf eine Person, deren Karte er sehen möchte. Wenn er sie gesehen hat schläft er wieder ein.</string>
     <string name="night_desc_thief">Jetzt erwacht der Dieb und sucht sich eine Person aus, bei der er oder sie die Nacht verbringen möchten. - Er zeigt auf diese Person und schläft danach wieder ein.</string>
-    <string name="night_desc_hunter">empty</string>
-    <string name="night_desc_knight">empty</string>
+    <string name="night_desc_hunter">Der Jäger ist gestorben. Er darf eine weitere Person töten:</string>
+    <string name="night_desc_knight">Der Ritter ist letzte Nacht gestorben. Wähle jetzt den nächsten Werwolf zur rechten das verstorbenen Jägers aus.</string>
     <string name="night_desc_flute">Zuletzt erwacht der bezaubernde Flötenspieler und darf eine Person seiner Wahl verzaubern. Hat er alle Mitspieler verzaubert gewinnt er.</string>
     <string name="night_desc_friends">Ich tippe alle Freunde kurz an. - Jetzt erwachen die Freunde und schauen sich an, um sich später wiederzuerkennen. - Die Freunde schlafen beruhigt wieder ein, da sie wisssen, dass sie nicht alleine sind.</string>
     <string name="night_desc_wolf_child">"Das Werwolfjunge erwacht und sucht sich ein Vorbild aus. Sollte dieses Vorbild sterben, wirst du auch ein Werwolf und wachst gemeinsam mit ihnen auf. -\n Das Junge schläft wieder."
